# practice-flask

./: .gitignore  Makefile  README.md  alembic.ini  create_db.py  pyproject.toml
migrations/: env.py
tests/: api_test.py  conftest.py
tests/data_access/: user_action_repository_test.py  user_repository_test.py
tests/models/: user_action_test.py
tests/services/: user_alert_condition_deposit_increase_test.py  user_alert_condition_deposit_window_test.py  user_alert_condition_transaction_window_test.py  user_alert_condition_withdrawal_consecutive_test.py  user_alert_condition_withdrawal_test.py  user_alert_service_test.py
tests/utils/: validators_test.py
user_monitoring/: api.py  app.py  config.py  main.py
user_monitoring/DTOs/: user.py  user_action.py
user_monitoring/data_access/: repositories_registry.py  user_action_repository.py  user_repository.py
user_monitoring/models/: __init__.py  user.py  user_action.py  user_action_model.py  user_model.py
user_monitoring/services/: user_alert_condition.py  user_alert_condition_deposit_increase.py  user_alert_condition_deposit_window.py  user_alert_condition_transaction_window.py  user_alert_condition_withdrawal.py  user_alert_condition_withdrawal_consecutive.py  user_alert_service.py
user_monitoring/utils/: validators.py
